# Struct3d

./: CMakeLists.txt  Readme.md  TAGS
src/: CMakeLists.txt  cartmesh.cpp  cartmesh.hpp  case.cpp  case.hpp  common_utils.cpp  common_utils.hpp  convdiff.cpp  convdiff.hpp  gridconv.cpp  pdebase.cpp  pdebase.hpp  poisson.cpp  poisson.hpp  runcase.cpp  struct3d_config.h
src/linalg/: matvec.cpp  matvec.hpp  s3d_gcr.cpp  s3d_gcr.hpp  s3d_gs.cpp  s3d_gs.hpp  s3d_ilu.cpp  s3d_ilu.hpp  s3d_isai.cpp  s3d_isai.hpp  s3d_jacobi.cpp  s3d_jacobi.hpp  s3d_mr.cpp  s3d_mr.hpp  s3d_sgspreconditioners.cpp  s3d_sgspreconditioners.hpp  s3d_solverbase.cpp  s3d_solverbase.hpp  solverfactory.cpp  solverfactory.hpp
src/pde/: convdiff.cpp  convdiff.hpp  convdiff_circular.cpp  convdiff_circular.hpp  pdebase.cpp  pdebase.hpp  pdefactory.cpp  pdefactory.hpp  pdeimpl.hpp  poisson.cpp  poisson.hpp
src/perftesting/: CMakeLists.txt  runcase.cpp  runpetsccase.cpp  runtest_openmp.cpp  scaling_openmp.cpp  scaling_openmp.hpp
test/: CMakeLists.txt  compare-threaded.cpp  compare-threaded_blasted.cpp  compare.cpp  compare_blasted.cpp  matvectest.cpp  nativevectorassemblytest.cpp  timematvec.cpp
test/discretization-verification/: CMakeLists.txt  cd-conv.control  cdcirc-conv.control  defaults.perc  gen.perc  gridconv-petsc.cpp  gridconv.cpp  native.perc  petscsolver.perc  poisson-cheb-conv.control  poisson-conv.control  spd.perc
test/input/: convdiff-testcase.control  convdiff.control  poisson-amg.control  poisson.control  poissonsmall.control  run-defaults.perc  scaling_openmp.perc
test/structsolvers/: CMakeLists.txt  compare.cpp
test/structsolvers/input/: convdiff-circ-large.control  convdiff-large.control  convdiff-verylarge.control  convdiff.control  poisson.control  struct-petsc.perc
